Fixing tooltip position, adding little triangle, handling offscreen.

--- a/Link Icon/extension/tooltip.css
+++ b/Link Icon/extension/tooltip.css
@@ -1,18 +1,59 @@
 #e01n2KonBeR9ayn1 {
-    align-items: center;
-    background-color: #333;
-    background-image: none;
-    border-color: gold;
-    border-style: solid;
-    border-radius: 3px;
-    border-width: 1px;
-    box-shadow: 0 0 5px #aaa;
-    color: #eee;
-    /* By default, the tooltip is invisible. */
-    display: none;
-    font-family: sans-serif;
-    justify-items: left;
-    padding: 5px 5px;
-    position: absolute;
-    z-index: 999;
-  }
+  align-items: center;
+  background-color: #333;
+  background-image: none;
+  border-color: gold;
+  border-style: solid;
+  border-radius: 3px;
+  border-width: 1px;
+  box-shadow: 0 0 5px #aaa;
+  color: #eee;
+  /* By default, the tooltip is invisible. */
+  display: none;
+  font-family: sans-serif;
+  justify-items: left;
+  padding: 5px 5px;
+  position: absolute;
+  z-index: 999;
+}
+
+#e01n2KonBeR9ayn1:after {
+  background: #333;
+  border-width: 1px !important;
+  content: "";
+  display: block;
+  height: 19px;
+  position: absolute;
+  transform: rotate(45deg);
+  width: 19px;
+  z-index: -1;
+}
+
+#e01n2KonBeR9ayn1.left:after {
+  border-right: 3px solid gold;
+  border-radius: 3px;
+  border-top: 3px solid gold;
+  box-shadow:
+    1.5px -2.5px 5px -3px gold;
+  right: -9px;
+}
+
+#e01n2KonBeR9ayn1.below:after {
+  border-left: 3px solid gold;
+  border-radius: 2px;
+  border-top: 3px solid gold;
+  box-shadow:
+    -2.5px -3.5px 5px -3px gold;
+  left: 3px;
+  top: -10px;
+}
+
+#e01n2KonBeR9ayn1.above:after {
+  border-bottom: 3px solid gold;
+  border-radius: 2px;
+  border-right: 3px solid gold;
+  bottom: -10px;
+  box-shadow:
+    2.5px 2.5px 5px -3px gold;
+  left: 3px;
+}
